FIXED THE OVERFLOWING TO DO TASK. FINALLY. fixes #6

--- a/public/main.css
+++ b/public/main.css
@@ -63,6 +63,7 @@ body{
 .list-container{
     display: flex;
     flex-direction: row;
+    align-items: center;
     width: 100%;
 }
 .list-container-title {
@@ -183,6 +184,7 @@ body{
     box-sizing: border-box; 
     width: 95%;
     overflow-wrap: break-word;
+    word-break: break-all;
 }
 
 .innertodo:hover{
